# vort

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug_server.js
assets/shaders/: common.wgsl  light.wgsl  mesh.wgsl  physics_based_material.wgsl  screen_space_mesh.wgsl  specular.wgsl  vertex.wgsl
src/: main.cpp
src/bindings/: CMakeLists.txt  ecs_binding.cpp  ecs_binding.hpp
src/core/: CMakeLists.txt  asset_manager.hpp  asset_server.hpp  bounding_volume.cpp  bounding_volume.hpp  bvh.cpp  bvh.hpp  camera_controller.hpp  camera_manager.cpp  camera_manager.hpp  components.hpp  config.hpp  cpu_mesh.hpp  data_structs.hpp  editor_plugin.hpp  event_emitter.hpp  events.hpp  font_reader.cpp  geometry.hpp  kd_tree.hpp  line.hpp  mesh.cpp  mesh.hpp  mesh_structure.hpp  plugins.hpp  ref.hpp  ref_cell.hpp  ref_mut.hpp  render_target_outputs.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp  window_events.hpp
src/core/actions/: action.hpp
src/core/brush_effects/: brush_effect.hpp  draw.cpp  inflate.cpp
src/core/geometry/: combined_geometry.cpp  cone.cpp  cube.cpp  custom_geometry_obj.cpp  cylinder.cpp  geometry.hpp  plane.cpp  torus.cpp  uv_sphere.cpp
src/core/modifiers/: .subdivision.cpp.un~  bevel.cpp  bevel.hpp  modifier.hpp  subdivision.cpp  subdivision.hpp
src/core/plugins/: editor_plugin.cpp  editor_plugin.hpp
src/ecs/: CMakeLists.txt  archtype.cpp  archtype.hpp  array_hashmap.hpp  command.hpp  component_callbacks.hpp  component_storage.cpp  component_storage.hpp  ecs.hpp  entities.cpp  entities.hpp  erased_component.cpp  erased_component.hpp  globals.hpp  javascript_bindings.hpp  query.hpp
src/math/: CMakeLists.txt  math.hpp  splines.hpp
src/mesh/: main.cpp  mesh_structure.hpp
src/renderer/: CMakeLists.txt  bind_group.hpp  bind_group_entries.hpp  dynamic_uniform_buffer.hpp  generate_cube.cpp  html_canvas_render_target.cpp  html_canvas_render_target.hpp  material.cpp  material.hpp  pipeline.hpp  pipeline_entries.hpp  raii_deleters.hpp  raytracing_pipeline.hpp  render_mesh_buffers.cpp  render_mesh_buffers.hpp  render_pass.cpp  render_pass.hpp  resource.cpp  resource.hpp  sampler.hpp  shader.hpp  storage_buffer.hpp  texture.cpp  texture.hpp  uniform_buffer.hpp  uniforms.cpp  uniforms.hpp  webgpu.hpp  webgpu_dawn.hpp  webgpu_emscripten.hpp  wgpu_context.cpp  wgpu_context.hpp  wgpu_mesh.cpp  wgpu_mesh.hpp
src/renderer/materials/: basic_material.cpp  basic_material.hpp  material.cpp  material.hpp  plain_material.cpp  plain_material.hpp
src/renderer/wgpu/: drawable.hpp  wgpu_engine.cpp  wgpu_engine.hpp  wgpu_initializers.hpp  wgpu_types.hpp
src/utils/: CMakeLists.txt  image.hpp  load_buffer.cpp  load_image.cpp  load_shader_code.cpp  load_string.cpp  main.cpp  preprocess_shader.cpp  raii.hpp  utils.hpp
